--- a/2-4-test.html
+++ b/2-4-test.html
@@ -6,22 +6,26 @@
 </head>
 <body>
 
-■甘酒の作り方
+<h1>甘酒の作り方</h1>
 
-◎材料
-・米　1合
-・米こうじ　300g
+<h2>材料</h2>
+<ul>
+        <li>米　1合</li>
+        <li>米こうじ　300g</li>
+</ul>
 
-◎作り方
-1. 炊飯器に米を入れ、お粥を炊きます。
-2. お粥を60度くらいになるまで冷まします。
-3. 米こうじを追加します。
-4. 炊飯器を保温モードにし、フタを開けたままで8時間ほど置きます。
+<h2>作り方</h2>
+<ol>
+        <li>炊飯器に米を入れ、お粥を炊きます。</li>
+        <li>お粥を60度くらいになるまで冷まします。</li>
+        <li>米こうじを追加します。</li>
+        <li>炊飯器を保温モードにし、フタを開けたままで8時間ほど置きます。</li>
+</ol>
+  
+<h1>甘酒とは<h1>
 
-■甘酒とは
-
-甘酒は栄養バランスにすぐれたスーパードリンクです。
-豊富なビタミンB群の他、食物繊維やオリゴ糖も含まれているので、美容にも健康にも効果を発揮します。
+<p>甘酒は栄養バランスにすぐれたスーパードリンクです。<br>
+豊富なビタミンB群の他、食物繊維やオリゴ糖も含まれているので、美容にも健康にも効果を発揮します。</p>
 
 </body>
 </html>
