--- a/2-test/index.html
+++ b/2-test/index.html
@@ -7,20 +7,21 @@
 </head>
 <body>
 
-IT PRO PARTNERS
+<h1>IT PRO PARTNERS</h1>
 
-ITプロパートナーズについて
+<h2>ITプロパートナーズについて</h2>
 
-ITプロパートナーズは「週2回」からのお仕事紹介でIT起業家やフリーランスの自立を支えるサービスです。
-エンジニア、デザイナー、ディレクター、マーケターなど幅広くお仕事を紹介しています。
+<p>ITプロパートナーズは「週2回」からのお仕事紹介でIT起業家やフリーランスの自立を支えるサービスです。<br>
+エンジニア、デザイナー、ディレクター、マーケターなど幅広くお仕事を紹介しています。</p>
 
-ITプロパートナーズが選ばれる3つの理由
+<h2>ITプロパートナーズが選ばれる3つの理由</h2>
 
-週2回からの案件を専属エージェントがご紹介
-成長企業の直案件で高単価 週3回で月額50万円も！
-専属エージェントがしっかりサポート
+<ul>
+        <ol>週2回からの案件を専属エージェントがご紹介</ol>
+        <ol>成長企業の直案件で高単価 週3回で月額50万円も！</ol>
+        <ol>専属エージェントがしっかりサポート</ol>
 
-Copyright (c)2015 ITPRO Inc. All Rights Reserved
+<p>Copyright (c)2015 ITPRO Inc. All Rights Reserved<p>
 
 </body>
 </html>
