--- a/3-test/index.html
+++ b/3-test/index.html
@@ -7,44 +7,71 @@
 <title>株式会社ITプロパートナーズ｜ITPRO PARTNERS</title>
 </head>
 <body>
-
-<h1>IT PRO PARTNERS</h1>
-
-ABOUT
-SERVICE
-RECRUIT
-NEWS
-CONTACT
-
-ITプロパートナーズについて
-
-ITプロパートナーズは「週2回」からのお仕事紹介でIT起業家やフリーランスの自立を支えるサービスです。
-エンジニア、デザイナー、ディレクター、マーケターなど幅広くお仕事を紹介しています。
-
-ITプロパートナーズが選ばれる3つの理由
-
-週2回からの案件を専属エージェントがご紹介
-	他案件や自社サービスと並行可能
-	契約期間3ヶ月〜で安定収入実現
-	稼動分の請求でリスク無し
-
-成長企業の直案件で高単価 週3回で月額50万円も！
-	95%以上が高単価な直案件
-	常時50件以上の週２〜案件保有
-	職種問わず案件多数（エンジニア・デザイナー・ディレクターなど）
-
-専属エージェントがしっかりサポート
-	希望に合致した案件をご紹介
-	契約交渉や債権管理を代行
-	継続的な案件紹介で未稼動なし
-
-CEOブログ
-弊社CEOのブログ
-
-「大盛り部」発足！
-メンバー募集中
-
-Copyright (c)2015 ITPRO Inc. All Rights Reserved
-
+<header>
+	<h1><img src="image.logo.png" alt="IT PRO PARTNERS"></h1>
+	<nav>
+		<ul>
+			<li>ABOUT</li>
+			<li>SERVICE</li>
+			<li>RECRUIT</li>
+			<li>NEWS</li>
+			<li>CONTACT</li>
+		</ul>
+	</nav>
+</header>
+<main>
+	<section>
+		<h2>ITプロパートナーズについて</h2>
+		<p>ITプロパートナーズは「週2回」からのお仕事紹介でIT起業家やフリーランスの自立を支えるサービスです。<br>
+		エンジニア、デザイナー、ディレクター、マーケターなど幅広くお仕事を紹介しています。</p>
+		<section>
+			<h3>ITプロパートナーズが選ばれる3つの理由</h3>
+			<dl>
+				<dt>週2回からの案件を専属エージェントがご紹介</dt>
+				<dd>
+					<ul>
+						<li>他案件や自社サービスと並行可能</li>
+						<li>契約期間3ヶ月〜で安定収入実現</li>
+						<li>稼動分の請求でリスク無し</li>
+					</ul>
+				</dd>
+			</dl>
+			<dl>
+				<dt>成長企業の直案件で高単価 週3回で月額50万円も！</dt>
+				<dd>
+					<ul>
+						<li>95%以上が高単価な直案件</li>
+						<li>常時50件以上の週２〜案件保有</li>
+						<li>職種問わず案件多数（エンジニア・デザイナー・ディレクターなど）</li>
+					</ul>
+				</dd>
+			</dl>
+			<dl>
+				<dt>専属エージェントがしっかりサポート</dt>
+				<dd>
+					<ul>
+						<li>希望に合致した案件をご紹介</li>
+						<li>契約交渉や債権管理を代行</li>
+						<li>継続的な案件紹介で未稼動なし</li>
+					</ul>
+				</dd>
+				</dt>
+			</dl>
+		</section>
+	</section>
+</main>
+<aside>
+	<dl>
+		<dt><img src="img/bnr_ceo-blog.png" alt="CEOプログ"/></dt>
+		<dd>弊社CEOのブログ</dd>
+	</dl>
+	<dl>
+		<dt><img src="img/bnr_oomori.png" alt="「大盛り部」発足！"/></dt>
+		<dd>メンバー募集中</dd>
+	</dl>
+</aside>
+<hooter>
+	<p>Copyright (c)2015 ITPRO Inc. All Rights Reserved</p>
+</hooter>
 </body>
 </html>
