--- a/5-6-test.html
+++ b/5-6-test.html
@@ -10,6 +10,9 @@ text-align: center;
 background-color: #c00;
 font-weight: bold;
 color:#fff;
+border-radius:10px;
+boxshadow: 3px 1px 2px 0 #000
+text-shadow: 0 0 6px #fff;
 }
 </style>
 </head>
