--- a/6-2-test/index.html
+++ b/6-2-test/index.html
@@ -50,3 +50,32 @@ clear: both;
 </div>
 </body>
 </html>
+
+h1{
+  width: 260px;
+  float: left;
+}
+p{
+  width: 340px;
+  float: right;
+}
+dt{
+  width: 48px;
+  float: right;
+}
+dd{
+  width: 240px;
+  float: left;
+}
+
+.content:after{
+  content:'';
+  display:block;
+  clear:both;
+}
+
+dl:after{
+  content:'';
+  display:block;
+  clear:both;
+}
