--- a/7-3-test/flower.html
+++ b/7-3-test/flower.html
@@ -13,6 +13,6 @@ body{
 </style>
 </head>
 <body>
-<img src="flower.png" alt="イラスト：花">
+<img src="flower.png" alt="イラスト：花" class="rounded-circle">
 </body>
 </html>
