--- a/7-3-test/cat.html
+++ b/7-3-test/cat.html
@@ -13,6 +13,6 @@ body{
 </style>
 </head>
 <body>
-<img src="cat.jpg" alt="写真：猫">
+<img src="cat.jpg" alt="写真：猫" class="img-fluid">
 </body>
 </html>
