--- a/7-3-test/table_sd1.html
+++ b/7-3-test/table_sd1.html
@@ -17,8 +17,8 @@ body{
 </head>
 <body>
 
-<div>
-	<table>
+<div class="table-responsive">
+	<table class="table">
 		<tr>
 			<th>猫の名前</th><th>特徴</th>
 		</tr>
